@@ -10,6 +10,7 @@
 // =================================================================================================
 
 #include "GIF_Support.hpp"
+#include <string.h>
 
 typedef std::basic_string<unsigned char> filebuffer;
 
