@@ -1,6 +1,7 @@
 1.99.10
 
 - Bug #14614: endian detection on Solaris.
+- Bug #14615: missing includes for Solaris.
 
 1.99.9
 
